fix: :lipstick: adjust spacing between events (#18)

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -211,7 +211,9 @@ nav
 // spielplan
 .month-block
   margin-top: 2rem
-  margin-bottom: 7rem
+  margin-bottom: 2rem
+  @media screen and ( min-width: 960px )
+    margin-bottom: 5rem
 
 .flip
   transform: scaleX(-1)
@@ -227,44 +229,38 @@ nav
   width: 65%
 
 .month-title
-  position: absolute
-  top: -15px
+  margin-bottom: -1rem
   @media screen and ( min-width: 375px )
-    top: -12px
+    margin-bottom: -1.5rem
     font-size: 2rem
   @media screen and ( min-width: 440px )
-    top: -13px
     font-size: 2.2rem
   @media screen and ( min-width: 540px )
-    top: -11px
+    margin-bottom: -1.75rem
     font-size: 2.4rem
   @media screen and ( min-width: 660px )
-    top: -12px
     font-size: 2.6rem
   @media screen and ( min-width: 740px )
-    top: -12px
+    margin-bottom: -2.25rem
     font-size: 2.8rem
   @media screen and ( min-width: 960px )
-    top: -11px
+    margin-bottom: -3rem
     font-size: 3.5rem
 
 .month-title-right
   right: 0
 
-.month-content-block
-  position: relativ
-
 .month-content
-  position: absolute
-  top: 30px
   @media screen and ( min-width: 440px )
-    top: 35px
+    margin-top: -0.5rem
   @media screen and ( min-width: 660px )
-    top: 40px
+    margin-top: -1rem
   @media screen and ( min-width: 740px )
-    top: 50px
+    margin-top: -1.25rem
   @media screen and ( min-width: 960px )
-    top: 55px
+    margin-top: -1.5rem
+    div
+      margin-bottom: -0.5rem
 
 .month-content-right
   right: 0
